Initial commit for MODA IMPETO

--- a/privacy.html
+++ b/privacy.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MODA IMPETO Privacy Policy - How we collect, use, and protect your information.">
@@ -21,15 +22,19 @@
 
 <body>
     <!-- Navigation -->
-    <div class="nav__cart">
-        <a href="cart.html" class="nav__cart-link">
-            <svg viewBox="0 0 24 24" class="nav__cart-icon">
-                <path
-                    d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
-            </svg>
-            <span class="nav__cart-count" id="cartCount">0</span>
+    <nav class="nav" id="nav">
+        <a href="index.html" class="nav__logo-link">
+            <img src="assets/logo.png" alt="MODA IMPETO" class="nav__logo">
         </a>
-    </div>
+        <div class="nav__cart">
+            <a href="cart.html" class="nav__cart-link">
+                <svg viewBox="0 0 24 24" class="nav__cart-icon">
+                    <path
+                        d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
+                </svg>
+                <span class="nav__cart-count" id="cartCount">0</span>
+            </a>
+        </div>
     </nav>
 
     <!-- Legal Content -->
