--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
@@ -26,14 +27,23 @@
     <a href="index.html" class="nav__logo-link">
       <img src="assets/logo.png" alt="MODA IMPETO" class="nav__logo">
     </a>
-    <div class="nav__cart">
-      <a href="cart.html" class="nav__cart-link">
-        <svg viewBox="0 0 24 24" class="nav__cart-icon">
+    <div class="nav__user-actions" style="display: flex; align-items: center; gap: 15px;">
+      <a href="account.html" class="nav__account-link" aria-label="My Account"
+        style="color: inherit; text-decoration: none; display: flex; align-items: center;">
+        <svg viewBox="0 0 24 24" style="width: 24px; height: 24px; fill: currentColor;">
           <path
-            d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
+            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z" />
         </svg>
-        <span class="nav__cart-count" id="cartCount">0</span>
       </a>
+      <div class="nav__cart">
+        <a href="cart.html" class="nav__cart-link">
+          <svg viewBox="0 0 24 24" class="nav__cart-icon">
+            <path
+              d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z" />
+          </svg>
+          <span class="nav__cart-count" id="cartCount">0</span>
+        </a>
+      </div>
     </div>
   </nav>
 
@@ -58,65 +68,11 @@
       </div>
 
       <div class="products__grid">
-        <!-- Product Card 1 -->
-        <article class="product-card fade-in">
-          <div class="product-card__image">
-            <img src="assets/products/product_jacket_1770300090044.png" alt="IMPETO Leather Jacket">
-          </div>
-          <div class="product-card__info">
-            <span class="product-card__category">Outerwear</span>
-            <h3 class="product-card__name">IMPETO Leather Jacket</h3>
-            <p class="product-card__price">¥128,000</p>
-          </div>
-          <div class="product-card__overlay">
-            <button class="btn btn--primary add-to-cart" data-id="1">ADD TO CART</button>
-          </div>
-        </article>
-
-        <!-- Product Card 2 -->
-        <article class="product-card fade-in">
-          <div class="product-card__image">
-            <img src="assets/products/product_hoodie_1770300104061.png" alt="IMPETO Signature Hoodie">
-          </div>
-          <div class="product-card__info">
-            <span class="product-card__category">Tops</span>
-            <h3 class="product-card__name">IMPETO Signature Hoodie</h3>
-            <p class="product-card__price">¥48,000</p>
-          </div>
-          <div class="product-card__overlay">
-            <button class="btn btn--primary add-to-cart" data-id="2">ADD TO CART</button>
-          </div>
-        </article>
-
-        <!-- Product Card 3 -->
-        <article class="product-card fade-in">
-          <div class="product-card__image">
-            <img src="assets/products/product_tshirt_1770300121576.png" alt="IMPETO Essential Tee">
-          </div>
-          <div class="product-card__info">
-            <span class="product-card__category">Tops</span>
-            <h3 class="product-card__name">IMPETO Essential Tee</h3>
-            <p class="product-card__price">¥18,000</p>
-          </div>
-          <div class="product-card__overlay">
-            <button class="btn btn--primary add-to-cart" data-id="3">ADD TO CART</button>
-          </div>
-        </article>
-
-        <!-- Product Card 4 -->
-        <article class="product-card fade-in">
-          <div class="product-card__image">
-            <img src="assets/products/product_pants_1770300139239.png" alt="IMPETO Cargo Pants">
-          </div>
-          <div class="product-card__info">
-            <span class="product-card__category">Bottoms</span>
-            <h3 class="product-card__name">IMPETO Cargo Pants</h3>
-            <p class="product-card__price">¥58,000</p>
-          </div>
-          <div class="product-card__overlay">
-            <button class="btn btn--primary add-to-cart" data-id="4">ADD TO CART</button>
-          </div>
-        </article>
+        <!-- Products loaded dynamically from API -->
+        <div class="products__loading"
+          style="grid-column: 1/-1; text-align: center; padding: 60px 20px; color: var(--color-gray);">
+          <p>Loading products...</p>
+        </div>
       </div>
     </div>
   </section>
