--- a/shipping.html
+++ b/shipping.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MODA IMPETO Shipping Policy - Delivery terms and conditions for your orders.">
@@ -22,6 +23,9 @@
 <body>
     <!-- Navigation -->
     <nav class="nav" id="nav">
+        <a href="index.html" class="nav__logo-link">
+            <img src="assets/logo.png" alt="MODA IMPETO" class="nav__logo">
+        </a>
         <div class="nav__cart">
             <a href="cart.html" class="nav__cart-link">
                 <svg viewBox="0 0 24 24" class="nav__cart-icon">
