Fix: Resolve critical 500 errors, add logic for admin session security, and polish UI/assets

--- a/account_login.html
+++ b/account_login.html
@@ -89,10 +89,12 @@
         <h1 class="auth-title">Login</h1>
         <form id="loginForm">
             <div class="form-group">
-                <input type="email" id="email" class="form-control" placeholder="Email Address" required>
+                <input type="email" id="email" class="form-control" placeholder="Email Address" required
+                    autocomplete="email">
             </div>
             <div class="form-group">
-                <input type="password" id="password" class="form-control" placeholder="Password" required>
+                <input type="password" id="password" class="form-control" placeholder="Password" required
+                    autocomplete="current-password">
             </div>
 
             <button type="submit" class="btn btn--primary btn-submit">LOGIN</button>
