--- a/inventory.html
+++ b/inventory.html
@@ -118,6 +118,7 @@
 </head>
 
 <body>
+    <script src="assets/admin-auth.js"></script>
     <div class="admin-layout">
         <!-- Sidebar -->
         <aside class="admin-sidebar">
@@ -174,68 +175,7 @@
 
     <script>
         const API_URL = '/api/products';
-        let token = localStorage.getItem('adminToken');
-
-        if (!token) {
-            window.location.href = 'login.html';
-        }
-
-        // Auth Logic
-        async function fetchWithAuth(url, options = {}) {
-            const headers = {
-                ...options.headers,
-                'Authorization': `Bearer ${token}`
-            };
-            const res = await fetch(url, { ...options, headers });
-            if (res.status === 401 || res.status === 403) {
-                const refreshed = await refreshToken();
-                if (refreshed) {
-                    headers['Authorization'] = `Bearer ${token}`;
-                    return fetch(url, { ...options, headers });
-                } else {
-                    alert('セッションが期限切れです。再度ログインしてください。');
-                    localStorage.removeItem('adminToken');
-                    window.location.href = 'login.html';
-                }
-            }
-            return res;
-        }
-
-        async function refreshToken() {
-            try {
-                const res = await fetch('/api/auth/refresh', {
-                    method: 'POST',
-                    headers: { 'Authorization': `Bearer ${token}` }
-                });
-                if (res.ok) {
-                    const data = await res.json();
-                    token = data.token;
-                    localStorage.setItem('adminToken', token);
-                    return true;
-                }
-                return false;
-            } catch (err) {
-                return false;
-            }
-        }
-
-        // Schedule token refresh
-        async function scheduleTokenRefresh() {
-            try {
-                const res = await fetch('/api/auth/verify', { headers: { 'Authorization': `Bearer ${token}` } });
-                if (res.ok) {
-                    const data = await res.json();
-                    const refreshIn = Math.min(data.expiresIn - 3600, 1800) * 1000;
-                    if (refreshIn > 0) {
-                        setTimeout(async () => {
-                            await refreshToken();
-                            scheduleTokenRefresh();
-                        }, refreshIn);
-                    }
-                }
-            } catch (err) { console.error(err); }
-        }
-        scheduleTokenRefresh();
+        // Auth is handled by admin-auth.js
 
         // Load Products
         async function loadInventory() {
@@ -312,10 +252,7 @@
         }
 
         // Logout
-        document.getElementById('logoutBtn').addEventListener('click', () => {
-            localStorage.removeItem('adminToken');
-            window.location.href = 'login.html';
-        });
+        // logoutBtn listener is handled by admin-auth.js
 
         loadInventory();
     </script>
