Remove tagline from hero section and metadata

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="MODA IMPETO - quiet / dangerous. Wear your impulse. Luxury streetwear fashion brand.">
+  <meta name="description" content="MODA IMPETO - Wear your impulse. Luxury streetwear fashion brand.">
   <meta name="keywords" content="MODA IMPETO, fashion, streetwear, luxury, brand">
-  <title>MODA IMPETO | quiet / dangerous</title>
+  <title>MODA IMPETO</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,11 +50,7 @@
   <section class="hero" id="hero">
     <div class="hero__content">
       <img src="assets/logo.png" alt="MODA IMPETO Logo" class="hero__logo">
-      <div class="hero__tagline">
-        <span class="hero__tagline-quiet">quiet</span>
-        <span class="hero__tagline-divider"></span>
-        <span class="hero__tagline-dangerous">dangerous</span>
-      </div>
+
     </div>
   </section>
 
