feat: Optimize mobile responsiveness and localize PayPal button

--- a/index.html
+++ b/index.html
@@ -23,9 +23,23 @@
 <body>
   <!-- Navigation -->
   <nav class="nav" id="nav">
+    <div class="nav__toggle" id="navToggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
     <a href="index.html" class="nav__logo-link">
       <img src="assets/logo.png" alt="MODA IMPETO" class="nav__logo">
     </a>
+
+    <ul class="nav__links">
+      <li><a href="index.html" class="nav__link">HOME</a></li>
+      <li><a href="index.html#products" class="nav__link">COLLECTION</a></li>
+      <li><a href="#hero" class="nav__link">STORY</a></li>
+      <li><a href="#footer" class="nav__link">CONTACT</a></li>
+    </ul>
+
     <div class="nav__user-actions" style="display: flex; align-items: center; gap: 15px;">
       <a href="account.html" class="nav__account-link" aria-label="My Account"
         style="color: inherit; text-decoration: none; display: flex; align-items: center;">
