--- a/product.html
+++ b/product.html
@@ -23,14 +23,31 @@
 <body>
     <!-- Navigation -->
     <nav class="nav scrolled" id="nav">
+        <div class="nav__toggle" id="navToggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
         <a href="index.html" class="nav__logo-link">
             <img src="assets/logo.png" alt="MODA IMPETO" class="nav__logo">
         </a>
-        <div class="nav__actions" style="display: flex; align-items: center; gap: 15px;">
-            <a href="order_history.html" class="nav__history-link"
-                style="font-size: 12px; text-transform: uppercase; letter-spacing: 1px; color: var(--color-gray); text-decoration: none; transition: color 0.3s;"
-                onmouseover="this.style.color='#fff'" onmouseout="this.style.color='var(--color-gray)'">Order
-                History</a>
+
+        <ul class="nav__links">
+            <li><a href="index.html" class="nav__link">HOME</a></li>
+            <li><a href="index.html#products" class="nav__link">COLLECTION</a></li>
+            <li><a href="index.html#hero" class="nav__link">STORY</a></li>
+            <li><a href="#footer" class="nav__link">CONTACT</a></li>
+        </ul>
+
+        <div class="nav__user-actions" style="display: flex; align-items: center; gap: 15px;">
+            <a href="account.html" class="nav__account-link" aria-label="My Account"
+                style="color: inherit; text-decoration: none; display: flex; align-items: center;">
+                <svg viewBox="0 0 24 24" style="width: 24px; height: 24px; fill: currentColor;">
+                    <path
+                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z" />
+                </svg>
+            </a>
             <div class="nav__cart">
                 <a href="cart.html" class="nav__cart-link">
                     <svg viewBox="0 0 24 24" class="nav__cart-icon">
